--- a/Pharma/appsettings.json
+++ b/Pharma/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "dbConnection": "Server=DESKTOP-SOOSCL6;database=pharmaDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
