Register, login, 2FA, SMTP and other

--- a/Pharma/appsettings.json
+++ b/Pharma/appsettings.json
@@ -8,5 +8,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "dbConnection": "Server=DESKTOP-SOOSCL6;database=pharmaDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "EmailConfiguration": {
+    "From": "Jaivikb29@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "UserName": "Jaivikb29@gmail.com",
+    "Password": "xxgj yrdk gbpf mhte"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200/",
+    "ValidIssuer": "",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp10H7zyr"
   }
 }
