--- a/Pharma/appsettings.json
+++ b/Pharma/appsettings.json
@@ -14,7 +14,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "UserName": "Jaivikb29@gmail.com",
-    "Password": "xxgj yrdk gbpf mhte"
+    "Password": "zkop fqow anwv tmkh"
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200/",
